<resources>
    <string name="app_name">WorldsFactory</string>
    <string name="learn_anytime">Learn anytime \nand anywhere</string>
    <string name="quarantine_is_the_perfect_time">Quarantine is the perfect time to spend your\nday learning something new, from anywhere!</string>
    <string name="next">Next</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="find_a_course">Find a course\nfor you</string>
    <string name="improve_your_skills">Improve your skills</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_dictionary">DictionaryActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="dictionary">Dictionary</string>
    <string name="training">Training</string>
    <string name="video">Video</string>
    <string name="word">Word</string>
    <string name="_word_">[word]</string>
    <string name="part_of_speech">Part of Speech:</string>
    <string name="part">Part</string>
    <string name="meanings">Meanings:</string>
    <string name="definition">Definition</string>
    <string name="example">Example</string>
    <string name="add_to_dictionary">Add to Dictionary</string>
    <string name="create_your_account">Create your account</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="please_enter_your_e_mail">Please enter your e-mail</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="word_saved">Word saved!</string>
</resources>